{
    "name": "ActionMap",
    "maps": [
        {
            "name": "Locomotion",
            "id": "feade954-53aa-4280-bd93-deb5f5dcb271",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "0d18076a-39a1-4a51-8b56-1d5ff0dd205f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "a1ab0040-44bf-4f2a-8694-ee90bf96f728",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "5d887ffa-9bc1-4739-9b49-5b5c39bff830",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "2d7b5492-034c-45b7-af29-0995ffdd1a4b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "d6ed79fd-7a96-4f3c-886e-fb77439921c4",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "78ecafad-f199-4fe2-8e8f-dd15346edac0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d9ffd16e-a875-4c34-a717-1952b9a2e889",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2e4b7e3c-76b6-4179-b758-0329d58d9e2b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5c3a5a8c-e062-44a4-8ad1-efd8dbf54989",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0bf05cd3-30fa-412f-af6d-b576eb73abef",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88b9502e-aacf-4233-ba29-0e78ddde7499",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e25b2a87-583a-42de-9deb-5e744963b136",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CameraControl",
            "id": "20b2cb7d-b37e-4108-b0cf-c554537bedbb",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "3c0513c4-9940-4067-ae6e-f560e841bc46",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LockOnToTarget",
                    "type": "Button",
                    "id": "cfc2f0d9-3def-40e4-a3f6-bdbe7f7d897d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CycleTargets",
                    "type": "Button",
                    "id": "de9a90db-890e-4372-ace2-f5dcf5ebd80a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeCameraMode",
                    "type": "Button",
                    "id": "bede9ddc-7fe5-4c6b-a556-f450f77d6750",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "55b814c0-df89-4828-ad47-35ac47470596",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6466304-3bae-4c30-93c7-8e9a1fc96abf",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70b34016-733b-427d-8175-284026dd6ca3",
                    "path": "<Joystick>/{Hatswitch}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "686dea2d-f0aa-4914-9746-a5ee940eef32",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockOnToTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61df7e55-88c9-4b5a-b7ab-5655f9eabae2",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CycleTargets",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1bcc878b-b0da-465a-bd1a-7291e92976fe",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeCameraMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Interaction",
            "id": "ab63ab36-3992-431b-b445-f1a251ccec80",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "6ab119e2-9c5a-4500-8a14-481cc4335e6b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "Inspect",
                    "type": "Button",
                    "id": "f74cc332-15bc-439d-9343-650f97fb25d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5b483f83-9ba4-4f2f-9cca-11a5946aef00",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "424d7070-5597-413f-94eb-bc18cccd9984",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Inspect",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Abilities",
            "id": "67f28106-a61a-4a94-b855-a47b15a52e64",
            "actions": [
                {
                    "name": "GrappleAbility",
                    "type": "Button",
                    "id": "9f3c807d-a6e5-41e5-8568-d33f36b15a62",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BuffAbility",
                    "type": "Button",
                    "id": "9e3b9161-d97c-4366-b296-04fd4d26f2d6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DashAbility",
                    "type": "Button",
                    "id": "11389b02-2b13-4f7a-9544-27ac2f94c6c1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShieldAbility",
                    "type": "Button",
                    "id": "4530299a-12f2-40b7-87c4-6ab00f1e5ab4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5939ac66-746e-4701-bed1-c13332e1a31a",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GrappleAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c33b34ae-2373-4764-81dd-65789730013b",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuffAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "699b1234-178f-46a8-8c0d-e59015358438",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DashAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3125358-9589-4001-a440-3acfa3e002e6",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShieldAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "General",
            "id": "78997225-4526-4f61-bdfc-a712a3ec25f6",
            "actions": [
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "f14356dc-7924-4465-a04a-320b0ff48c5e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e46696d6-a74c-4504-a4e7-f82204d4a25e",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}